unpackaged/main/default/objects/Override_Resource_Preference__c/Override_Resource_Preference__c.object-meta.xml
<CustomObject>
    <label>Override Resource Preference</label>
    <nameField>
        <label>Override Resource Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Override Resource Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>