unpackaged/main/default/objects/Override_Resource_Preference__c/fields/Scheduling_Override__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Override__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scheduling Override</label>
    <referenceTo>Service_Territory_Scheduling_Override__c</referenceTo>
    <relationshipLabel>Override Resource Preferences</relationshipLabel>
    <relationshipName>Override_Resource_Preferences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>