unpackaged/main/default/objects/Override_Resource_Preference__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Override Resource Preferences</relationshipLabel>
    <relationshipName>Override_Resource_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>