unpackaged/main/default/objects/Override_Resource_Preference__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Override Resource Preferences</relationshipLabel>
    <relationshipName>Override_Resource_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>