unpackaged/main/default/objects/Override_Resource_Preference__c/validationRules/Cannot_Select_Territory_and_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Select_Territory_and_Resource</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Service_Territory__c)), NOT(ISBLANK(Service_Resource__c)))</errorConditionFormula>
    <errorMessage>You cannot select both a Service Territory and Service Resource on the same Override Preference</errorMessage>
</ValidationRule>