unpackaged/main/default/objects/Override_Resource_Preference__c/validationRules/Must_Select_Either_Territory_or_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Select_Either_Territory_or_Resource</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Service_Territory__c), ISBLANK(Service_Resource__c))</errorConditionFormula>
    <errorMessage>You must select either a Service Territory or Service Resource</errorMessage>
</ValidationRule>